jvm args for java.base and java.lang